@@ -38,12 +38,3 @@ Fix Win32 when perl is installed in C:\Program Files
 
 Make sure PDL builds
 
-Test that bogus Makefile.PL's cause warnings.
-
-Test that bogus hint files cause warnings.
-
-Test that Makefile.PL's are run in package main.
-
-Test that @INC contains the cwd in recursive Makefile.PL's.
-
-Test that fix for #413 worked
