@@ -9,6 +9,12 @@ sub PRINT {
 	$$self .= join('', @_);
 }
 
+sub PRINTF {
+	my $self = shift;
+    my $fmt  = shift;
+	$$self .= sprintf $fmt, @_;
+}
+
 sub read {
 	my $self = shift;
 	return substr($$self, 0, length($$self), '');
